    gPaths are regular expressions. (Simon)

    \item Added a new optional argument to 'gridToSVG', called
    'annotate'. If 'TRUE', adds an SVG comment below the root '<svg>'
    element that provides information on how 'gridToSVG' was called,
    along with metadata about gridSVG itself. Potentially useful for
    debugging. (Simon)

    \item Including support for 'clipGrob's. (Simon).

  }
}

\section{Changes in version 0.9-4}{
  \itemize{

    \item Added dependency on R >= 2.15.0

    (plotmath location depends on 'grobAscent()')

    \item 'gridToSVG()' now copes with empty text, e.g.,
    'grid.text("")'.

    SVG elements are still produced (so that there is something in the
    SVG doc that corresponds to the original grid grob), but nothing
    should be drawn when the SVG doc is viewed.

    Reported by Gabriel Becker.

    \item 'gridToSVG()' no longer ignores 'hjust' and 'vjust' in
    'grid.rect()'.

    Reported by Gabriel Becker.

    \item Conversion of points grobs for 'pch=15:20' now sets colours
    correctly (used to be wrong if points grob did not have explicit
    'gpar(col)' setting).

    \item Improved animation of x/y/size for points grobs.

    Now works for pch=0,1,2, 5,6, 15--25

    (i.e., does not work yet on symbols that are combinations of shapes)

    \item Fixed problem with raster aspect ratio.

    \item Fixed problem with animating raster grobs when width and/or
    height are not specified.

    \item Fixed bug in animating segments grobs (used to just not work).

    \item Added support for 'roundrect' grobs.

    \item Added support for 'move.to' and 'line.to' grobs.

    \item Rounding more SVG attributes to 2dp, only a few were missed
    earlier. (Simon)

    \item Points grobs for 'pch=15:20' now check whether there is an
    explicit 'gpar(col)'. If so, the fill is set to that, otherwise this
    is retrieved from the viewport. (Simon)

  }
}

\section{Changes in version 0.9-0}{
  \itemize{
